--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
+*{
+    margin: 0px;
+    box-sizing: border-box;
+}
+body{
+    font-family: "Open Sans",sans-serif;
+}
+
